# ChangeLog for app-shells/tcsh
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/tcsh/ChangeLog,v 1.103 2011/11/01 09:26:50 chainsaw Exp $

  01 Nov 2011; Tony Vroon <chainsaw@gentoo.org> tcsh-6.17-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Elijah "Armageddon" El Lazkani in bug #389013.

  01 Aug 2011; Michael Haubenwallner <haubi@gentoo.org> tcsh-6.17-r1.ebuild:
  add keyword ~ppc-aix

  22 Apr 2011; Fabian Groffen <grobian@gentoo.org> tcsh-6.16.ebuild,
  tcsh-6.17-r1.ebuild:
  Convert to EAPI=3 for Prefix, bug #364305

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> tcsh-6.15-r2.ebuild:
  Drop to ~mips

  08 Oct 2010; Fabian Groffen <grobian@gentoo.org> tcsh-6.16.ebuild:
  Remove leftover RDEPEND=DEPEND line, thanks Kevin Pyle again

  06 Oct 2010; Fabian Groffen <grobian@gentoo.org> tcsh-6.14-r5.ebuild,
  tcsh-6.15-r2.ebuild, tcsh-6.16.ebuild, tcsh-6.17-r1.ebuild:
  Straighten out RDEPEND as suggested by Kevin Pyle in bug #339638

*tcsh-6.17-r1 (24 Jan 2010)

  24 Jan 2010; Fabian Groffen <grobian@gentoo.org> -tcsh-6.17.ebuild,
  +tcsh-6.17-r1.ebuild:
  Install manpage in usr/share, bug #302028. Renamed USE=perl to USE=doc
  since that's what it does.

*tcsh-6.17 (22 Jan 2010)

  22 Jan 2010; Fabian Groffen <grobian@gentoo.org> +tcsh-6.17.ebuild:
  Version bump

  30 Sep 2009; Fabian Groffen <grobian@gentoo.org> tcsh-6.16.ebuild:
  Merge Prefix changes, no differences in functionality or behaviour

  10 Apr 2009; Fabian Groffen <grobian@gentoo.org> tcsh-6.16.ebuild:
  Bump patchset to remove cr0 from stty call, since this is non-POSIX, and
  (even GNU coreutils on) FreeBSD chokes on it. Since there is no bug reported
  for this, I don't bump the package.

  23 Mar 2009; Brent Baude <ranger@gentoo.org> tcsh-6.16.ebuild:
  stable ppc64, bug 262849

  23 Mar 2009; Raúl Porcel <armin76@gentoo.org> tcsh-6.16.ebuild: