@@ -17,13 +17,13 @@ DIST tcsh-gentoo-patches-r1.8.tar.bz2 2484 RMD160 d2ac41730bbbdfb8db77a67a0104ed
 EBUILD tcsh-6.14-r5.ebuild 1871 RMD160 6665ba481944e7f3f8dd8ca9142f6c04f667c55f SHA1 3b07f6f86dace5700d7206134ade426ce2c03b13 SHA256 1932e60386b6c5a09b15c682cbe32a661c495c10db507d86286bb75531ee47e2
 EBUILD tcsh-6.15-r2.ebuild 2100 RMD160 9f1c1e4e751b6100280b148b33dab18c9bc7dd5e SHA1 8d56947fff644a6ab0f7c06bfaf202d62af74c90 SHA256 05b9a965321a0cbf92762ca44b0d9a575387bd920039ca0395465c8d1a814da5
 EBUILD tcsh-6.16.ebuild 2606 RMD160 510ed6f0b2e0d7d4c0de6726ae0e238f31c20234 SHA1 35692fd2bf23a451272ebe9cd8010038122b474f SHA256 bebfd92ea8bdd8fe4fa1f91cdeec4620562bbc2849273247e4df48375fe1ca97
-EBUILD tcsh-6.17-r1.ebuild 2684 RMD160 5ca9614ba5d5b129054dadc1b851021137992c6e SHA1 e3c3b34be51a3a8e3db8ed39bec2720b32e1e5d4 SHA256 fcf41a1feb493be8dad3f09d0c57334363f3228da98bccf7bbca982ef583f447
-MISC ChangeLog 15355 RMD160 dd661e0b19918cd109a55ab040b59a3cd9c11fab SHA1 98e921e174dab0dc7d9bb1803f92dff0ad9dc107 SHA256 09c1e1e9c667feafd43653b5efdf5924951f38dc75d3d59e0a9e4ab12bd705aa
+EBUILD tcsh-6.17-r1.ebuild 2678 RMD160 2d5593ee03722d5fd20006264431c4ea3897cbc5 SHA1 6876977f136271875adc39f1b0ae1978e885a6c6 SHA256 ab45290abbdff55ee3b439e4d767855a028e799434a0e6cc460776e31002660d
+MISC ChangeLog 15452 RMD160 36ab8c408344fa548ddce0e71030a185683defa0 SHA1 b8b3d90e6fcf5ebba809e7bf9d8e89aac05e11b3 SHA256 ffca34d8d7444a71c98effa88e9b5328bd60682a30f513c58a87203a98b70d76
 MISC metadata.xml 706 RMD160 cd6d706bee1e966787f5de57fdb791cf92863b3d SHA1 a14ef481c73cbf514f117331625a499f84c26965 SHA256 318990e6f93f738cc70e956b6b00831079b273215eb994da7ec80f03aaa0db59
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk6vu2wACgkQp5vW4rUFj5pqpgCgoVFKGyeeFW39yj9dKvKrD44i
-ygAAoIgC9NTd04jRSUfdcTHtmaP3yBFd
-=Uq76
+iEYEARECAAYFAk6wHqkACgkQVWmRsqeSphO+WACfVEzY8sSwTBV5QK6SI21o2pM9
+DY0An0vbK9HjkU974H9od9HSsRX+/giU
+=RRg3
 -----END PGP SIGNATURE-----
