@@ -3,21 +3,19 @@ Hash: SHA1
 
 AUX xfce4-clipman-plugin-1.1.1-exo.patch 475 RMD160 8007fc18d876d1d210f339a74b2523892874a83d SHA1 35aa61a8edfd8ffbb22e1cab48ba9c80673bea05 SHA256 1bc2ea5614f3d4b3dae0653ff92b8f35ed2489af3eb678cc4fc973fc49897518
 DIST xfce4-clipman-plugin-1.1.3.tar.bz2 801564 RMD160 5e7134b53b94dace4baa62761771823118d05b99 SHA1 261f82dcc8313cef9e7a52494e58741c2b2ada64 SHA256 4a306bba5b68b88c93f36ad5aa1cc472fdb2115144f600067146853cfdf9c08c
-DIST xfce4-clipman-plugin-1.2.0.tar.bz2 770481 RMD160 bbd4cd9b1253d2705fb2180133643528fbd82be7 SHA1 e8200824fbd5c39e67e65d34dfcd78ceb8c75e8e SHA256 bc03737a63d9f7db327fe20b383af59e0072f712bc6a7349cc60855d2303223d
 DIST xfce4-clipman-plugin-1.2.1.tar.bz2 827969 RMD160 6f863bb238ed0b157fb178a58c1b2f0aa042522b SHA1 1154f1954b3aa2fd1877e089abc75d66db26dd71 SHA256 ccf4582423b823fba254ef45435c4e60e8f0f758433e3048efc694206eca1650
 EBUILD xfce4-clipman-plugin-1.1.3.ebuild 1308 RMD160 d579e1bb81bd79fef10f251512e9f41675885f99 SHA1 19508ce59bac8db60a19e3607792af04def392b1 SHA256 11c8130363df44675322d0688bfccd9cceed21fde8b204596af11e62d7cdf523
-EBUILD xfce4-clipman-plugin-1.2.0.ebuild 1094 RMD160 550ecab8df7fc23c02826c81381fefb964d75a5e SHA1 a18581e4bcec8f1a94ceb46a6503f8371c4df2b2 SHA256 00bca87eac10b28e7d9467c1f53c136da272c53852d930246c75e395c653b9ca
-EBUILD xfce4-clipman-plugin-1.2.1.ebuild 1112 RMD160 59ec6f67a6e9f68f5604cf297a746ed4f0463dab SHA1 81f53ee4227ebff38634b3a6a5d88bb83ab6d65d SHA256 a71ae2736c87262033850aaeb6a893308d4ba5d62557a3139f481419d2bc0b6d
-MISC ChangeLog 4617 RMD160 510192912b5e8c3569c1f75ee1441daf40ae82fb SHA1 b17d6fd5ce0d60a4d5b91267cc7d4ebb2bc01bd0 SHA256 dab046c0726410a30a0048fdf14aee066418a7b921932e219d969fb8b22a3ea1
+EBUILD xfce4-clipman-plugin-1.2.1.ebuild 1131 RMD160 c6f78dd42e717dc4c026e63080f63fb1739a57d3 SHA1 3caaa0ad2af39e576c623f37dc109a1c0ba5956a SHA256 d990c2c618113063d71d53083a96aea15af885d8f8ca3ff402dbb02841e15914
+MISC ChangeLog 4866 RMD160 65da56fb1c2f8fbb638cbb4fa526509221469a06 SHA1 da07c8d43eb2609a8a472ddd4ebb9aaefbdfa2f0 SHA256 11d8ff171b97130927110b9db2b94d9c9671a8ac62014a80c3b208e0814f5599
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOryvQAAoJEEdUh39IaPFNxqkH/2gXz6lqa6LDAqDh4F2nfnXM
-HUzV4djlK7CdptuQZVuhTKKajIFedOGU96jLBjygMFmpqLFm/aEF4d08Jgzg8VMR
-WuOXteqZ8hWGKb+D4zO/Zf0qAFN6oq0dPQVRCxzEgBz51apyIXC3+1SHLfAmFoF8
-TYj4Qm7MoRvdem0wKnpF3wHFDMfAx8kwSbqv3EJW2461jktwPRPROVeucWHA7if+
-sM2pa0/f63vJMa67y1E9e0vnYxmLXtXHcWFNU/0jPE8gMg+NETWxKpeKw1fWPhs6
-dvMdaEPJBoVOuQx7uHFIU6cyO1VVsYDTWHG1j2UiFnl8zSXMmV1dFlHE8iFbOwM=
-=IhnW
+iQEcBAEBAgAGBQJOsBSlAAoJEEdUh39IaPFNZzYH/1nVb8rF4oEsN/V5Jz3qQJrP
+XnUlMSisZfQSIjCH2eSo2UN8iXiSI5mOFojdaZEzNMSu+pHh+3m/Dr3N21xNiHGo
+W07D9QG4EmOwKT9cRkGZ8KN4sHmrtU860GktGvCLJnlsnnAre0DdoNx8gouSJaJE
+bGyBD0SsWb8mnaeinAwPf5AfWZ0x09sQ7TIeZcIZQOxfB65NM+py1R8VS/Kn+Wj2
+kb83N/gwzWzdd6qTfdQbhlD6EW0Ib1d+9jrgOIMDGlLhgRFuoJKqSMEo3wiJd8bl
+k3NR5i0DysOoKmXNp9o1PMj9iPAeVzNySnW2Z6evy7E6xiTikS9pTvXfpWrgjtU=
+=zeKl
 -----END PGP SIGNATURE-----
