@@ -1,38 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-clipman-plugin/xfce4-clipman-plugin-1.2.0.ebuild,v 1.1 2011/10/24 14:55:01 ssuominen Exp $
-
-EAPI=4
-inherit xfconf
-
-DESCRIPTION="A clipboard manager plug-in for the Xfce panel"
-HOMEPAGE="http://goodies.xfce.org/projects/panel-plugins/xfce4-clipman-plugin"
-SRC_URI="mirror://xfce/src/panel-plugins/${PN}/1.2/${P}.tar.bz2"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~ia64-linux ~x86-linux"
-IUSE="debug"
-
-RDEPEND=">=dev-libs/glib-2.18:2
-	dev-libs/libunique:1
-	>=x11-libs/gtk+-2.14:2
-	x11-libs/libXtst
-	>=xfce-base/exo-0.6
-	>=xfce-base/libxfce4ui-4.8
-	>=xfce-base/libxfce4util-4.8
-	>=xfce-base/xfce4-panel-4.8
-	>=xfce-base/xfconf-4.8"
-DEPEND="${RDEPEND}
-	dev-util/intltool
-	dev-util/pkgconfig
-	sys-devel/gettext"
-
-pkg_setup() {
-	XFCONF=(
-		--docdir="${EPREFIX}"/usr/share/doc/${PF}
-		$(xfconf_use_debug)
-		)
-
-	DOCS=( AUTHORS ChangeLog NEWS README TODO )
-}
